@@ -22,26 +22,37 @@ class SQLiteConnection(DBAPI):
     schemes = [dbName]
 
     def __init__(self, filename, autoCommit=1, **kw):
-        try:
-            from pysqlite2 import dbapi2 as sqlite
-            self.using_sqlite2 = True
-        except ImportError:
+        backend = kw.pop('backend', None)
+        if backend is None:
             try:
-                import sqlite3 as sqlite
+                from pysqlite2 import dbapi2 as sqlite
                 self.using_sqlite2 = True
             except ImportError:
+                try:
+                    import sqlite3 as sqlite
+                    self.using_sqlite2 = True
+                except ImportError:
+                    import sqlite
+                    self.using_sqlite2 = False
+        elif backend in ('sqlite2', 'pysqlite2'):
+                from pysqlite2 import dbapi2 as sqlite
+                self.using_sqlite2 = True
+        elif backend == 'sqlite3':
+                import sqlite3 as sqlite
+                self.using_sqlite2 = True
+        elif backend in ('sqlite', 'sqlite1'):
                 import sqlite
                 self.using_sqlite2 = False
+        else:
+            raise ValueError('Unknown SQLite backend "%s", expected pysqlite2, sqlite3 or sqlite')
         if self.using_sqlite2:
             sqlite.encode = base64.encodestring
             sqlite.decode = base64.decodestring
         self.module = sqlite
         self.filename = filename  # full path to sqlite-db-file
         self._memory = filename == ':memory:'
-        if self._memory:
-            if not self.using_sqlite2:
-                raise ValueError(
-                    "You must use sqlite2 to use in-memory databases")
+        if self._memory and not self.using_sqlite2:
+            raise ValueError("You must use sqlite2 to use in-memory databases")
         # connection options
         opts = {}
         if self.using_sqlite2:
