@@ -16,13 +16,15 @@ Features & Interface
 * SET client_encoding for PostgreSQL to the value of '?charset=' parameter
   in DB URI.
 
-* Removed deprecated attribute and functions.
-
 * alternateMethodName defined for all unique fields, not only alternateID;
   this makes SQLObject create by*() methods for all unique fields.
 
 * .selectBy(), .deleteBy() and .by*() methods pass all values through
   .from_python(), not only unicode.
+
+* The user can choose a DB API driver for SQLite by using a "backend"
+  parameter in DB URI or SQLiteConnection. Possible backends are:
+  "pysqlite2" (alias "sqlite2"), "sqlite3", "sqlite" (alias "sqlite1").
 
 Small Features
 --------------
@@ -30,6 +32,8 @@ Small Features
 * Imported DB API drivers are stored as connection instance variables, not
   in global variables; this allows to use different DB API drivers at the
   same time; for example, PySQLite2 and sqlite3.
+
+* Removed all deprecated attribute and functions.
 
 SQLObject 0.11
 ==============
